import java.util.ArrayList;
import java.util.List;

public class Stack {
    List<Card> myCard = new ArrayList<>();

}
