@startuml






class SpellCard{}
class MonsterCard{}

MonsterCard <|-- Card

SpellCard <|-- Card

Card }o--o| Stack

Stack ||--|| User

Card}|--|| Package

class Package{
}

class Card {
-String name
-int damage
-String elementType
}
class User {
-String username
-String password
-int coins
}
class Stack{
Vector<E> = new Vector<E>()
}
@enduml